2023-06-22  Bart Schaefer  <schaefer@zsh.org>

	* Marlon Richert: 51860: Completion/Base/Completer/_prefix,
	Test/Y01completion.ztst, Test/comptest: simplify suffix handling
	in _prefix to remove longstanding and less accurate hack; tests.

	* Stephane: 51813: Functions/Misc/is-at-least: differentiate empty
	$2 from omitted $2 to avoid wrong comparisons against ZSH_VERSION.

2023-06-20  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51877: Src/Modules/pcre.mdd, configure.ac: do not build pcre
	module if pcre2-config is not available.

2023-06-19  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51862: Doc/Makefile.in, configure.ac: support texinfo-7.0

2023-06-08  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51826: Src/hist.c: correctly handle metafied null character
	when reading history file

	* Stephane: 51817: Completion/BSD/Command/_rcctl: protect ':'
	in _rcctl (was in 51817 but missed in commit 0577daf)

2023-06-06  Peter Stephenson  <p.stephenson@samsung.com>

	* Stephane: 51818: Protect another ':'.

	* Stephane: 51817: Protect some use of ':' from history modifier
	interpreation.

	* 51816: Doc/Zsh/expn.yo, Src/hist.c, Src/subst.c,
	Test/D04parameter.ztst: add :S history modifier with pattern
	match.

2023-06-06  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Marlon Richert: 51779: Test/Y01completion.ztst: update
	completion test for 51761

2023-05-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 51739: Src/hist.c: detect invalid history word beginning.

2023-05-21  Oliver Kiddle  <opk@zsh.org>

	* 51769: Src/jobs.c, Src/utils.c: fix compilation when
	HAVE_GETRUSAGE is not defined

	* Marlon Richert: 51761: Completion/Zsh/Type/_parameters:
	Use zstyle verbose for _parameters descriptions

	* Marlon Richert: 51682: Completion/Base/Core/_main_complete,
	Test/Y01completion.ztst: Fix subscript completion bugs
	inside ~[...]

	* Marlon Richert: 51759: Completion/Zsh/Type/_command_names:
	Show alias values in command completions
